Closed Bug 21276 Opened 25 years ago Closed 25 years ago

Combo boxes submit %0D%0A for no value/label/content

Categories

(Core :: DOM: Core & HTML, defect, P3)

defect

Tracking

()

CLOSED FIXED

People

(Reporter: steven.cline, Assigned: rods)

References

()

Details

(Whiteboard: fix available, needs review)

Attachments

(1 file)

If you do a salary or rates query at the realrates.com site, you get no hits
using the Milestone 11 or 11/30 win32 nightly mozilla build. Works fine in
Netscape 4.7
Assignee: karnaze → pollmann
Eric, please decide quickly if this is yours or netlib's.
I am able to reproduce this bug.  Updating URL.
I typed in

City: Moutain View
State/Country Code: CA
Industry: Software
Clicked on "Search the Real Rate Survey"

In Nav 4.7 got back:
Specialty                      Location              Off? Ext Rate/hr   Date...
---------                      --------              ---- --- -------   ----...
Perl/HTML/CGI/Unix             Mountain View     CA       Yes $40     1/4/99...
Java                           Mountain View     CA  Off  No  $68     11/2/99..
Oracle UNIX                    Mountain View     CA  Off  No  $75     11/7/99..

In Gecko got back "No items were found that match your search requirements"

I'll trace the net trafic to see if I can figure out what's going on...
Nav tells the server:
POST /cgi-bin/msearch4.cgi HTTP/1.0
Referer: http:///www.realrates.com/msearch.htm
Connection: Keep-Alive
User-Agent: Mozilla/4.7 [en] (X11; I; Linux 2.2.12-20 i686)
Host: realrates.com
Accept: image/gif, image/x-xbitmap, image/jpeg, image/pjpeg, image/png, */*
Accept-Encoding: gzip
Accept-Language: en
Accept-Charset: iso-8859-1,*,utf-8
Cookie: COLUMNLIST=changeddate severity priority platform owner status
resolution summary
Content-type: application/x-www-form-urlencoded
Content-length: 112

specialty=&operator=OR&specialty2=&job=&city=Mountain+View&state=CA&industry=Software&offsite=&brokered=&status=

We tell the server:
POST /cgi-bin/msearch4.cgi HTTP/1.0
host: realrates.com
user-agent: Mozilla/5.0 [en-US] (Linux; I)
accept: */*
Content-type: application/x-www-form-urlencoded
Content-Length: 130

specialty=&operator=OR&specialty2=&job=&city=Mountain+View&state=CA&industry=Software&offsite=%0D%0A&brokered=%0D%0A&status=%0D%0A

It's those darn extra CRLF's for offsite, brokered, and status...  When I
removed them manually then adjusted the Content-Length down to a corresponding
112 we got the same results as Nav.  I'm CC'ing rod as the inputs in question
are selects (combos).  We need to find out where the extra CRLF is coming from.

Attaching a reduced test case:
Severity: normal → major
OS: Windows NT → All
Hardware: PC → All
Summary: Realrates query always yields no hits → Combo boxes submit %0D%0A for no value/label/content
Attached file Reduced Test Case
Assignee: pollmann → rods
Status: ASSIGNED → NEW
Whiteboard: fix available, needs review
Rod, can you take a look at this?

nsHTMLOptionElement::GetText()

In revision 1.25 (September 8), the comment added was:

changed the way white space was being compress when getting the value
now a value of all spaces does get compressed to nothing

(Should read "doesn't get compresssed to nothing" based on the code)
The code in question is:

 479         // the option could be all spaces, so compress the white space
 480         // then make sure the length is greater than zero
 481         if (aText.Length() > 0) {
 482           nsAutoString compressText = aText;
 483           compressText.CompressWhitespace(PR_TRUE, PR_TRUE);
 484           if (compressText.Length() != 0) {
 485             aText = compressText;
 486           }
 487         }

My suggested fix is to back out this patch added for revision 1.25.  Was this
needed for another bug?

Thanks!
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
stripping whitespace from options for form submission - fixed
Status: RESOLVED → CLOSED
Component: HTML: Form Submission → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: