stripping out all the whitespace for form data submission commented changing the visible directly bug 21276, r=pollmann a=chofmann